--- a/Test.fsproj
+++ b/Test.fsproj
@@ -8,6 +8,9 @@
     <Compile Include="LunchTypes.fs" />
     <Compile Include="DataAccess.fs" />
     <Compile Include="Program.fs" />
+    <Content Include="Sample.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.0.*" />
